<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="60dp"
    android:gravity="center"
    android:layout_marginEnd="15dp"
    android:background="@drawable/bg2"
    android:layout_height="146dp">


        <TextView
            android:textColor="@color/white"
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12_am"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp"
            android:contentDescription="@string/img"
            android:src="@drawable/img_1" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_19"
            android:textSize="15sp" />

</LinearLayout>