<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29233C"
    tools:context=".screens.DetailsScreen">

    <!--    Top Header -->
    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/montreal"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_19_mostly_clear"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityName" />
    <!--    Top Header -->

    <!--    Content Section -->
    <!--    this is main content bg-->
    <View
        android:id="@+id/mainBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="#402867"
        app:layout_constraintTop_toBottomOf="@id/cityInfo" />

    <!--    Inside of the content section -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@id/mainBg"
        app:layout_constraintRight_toRightOf="@id/mainBg"
        app:layout_constraintTop_toTopOf="@id/mainBg" />
    <!--        Top custom tabbar-->
    <TextView
        android:id="@+id/hourlyForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hourly_forecast"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/mainBg"
        app:layout_constraintTop_toTopOf="@id/mainBg" />

    <View
        android:id="@+id/underLine1"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gradient"
        app:layout_constraintLeft_toLeftOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/hourlyForecast" />

    <TextView
        android:id="@+id/weeklyForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/weekly_forecast"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/mainBg"
        app:layout_constraintTop_toTopOf="@id/mainBg" />

    <View
        android:id="@+id/underLine2"
        android:layout_width="130dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/gradient"
        app:layout_constraintRight_toRightOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/weeklyForecast" />
    <!--        List of weather info-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listOfInfo"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="@id/mainBg"
        app:layout_constraintRight_toRightOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/underLine1" />
<!--            Card air quality-->
    <ImageView
        android:layout_marginBottom="8dp"
        android:id="@+id/airQuality"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="230dp"
        android:background="@android:color/transparent"
        android:src="@drawable/air_quality_card"
        app:layout_constraintTop_toTopOf="@id/mainBg" />
    <!--        Grid cards-->
    <ImageView
        android:id="@+id/uvIndex"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/uv_index_card"
        app:layout_constraintLeft_toLeftOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/airQuality" />

    <ImageView
        android:id="@+id/sunrise"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/sun_rise_card"
        app:layout_constraintRight_toRightOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/airQuality" />

    <ImageView
        android:id="@+id/wind"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/wind_card"
        app:layout_constraintLeft_toLeftOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/uvIndex" />

    <ImageView
        android:id="@+id/rainfall"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/rain_fall_card"
        app:layout_constraintRight_toRightOf="@id/mainBg"
        app:layout_constraintTop_toBottomOf="@id/sunrise" />
    <!--    Content Section -->
</androidx.constraintlayout.widget.ConstraintLayout>